--- a/desafio-02/src/styles.css
+++ b/desafio-02/src/styles.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+li {
+  list-style: none;
+}
+
 #root {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -47,12 +51,21 @@
   background-color: darkkhaki;
 }
 
+.nav-button {
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  margin-bottom: 1rem;
+}
+
 .button {
   font-size: 1rem;
   font-weight: 600;
-  padding: 1rem 1.5rem;
   cursor: pointer;
   border: none;
+  padding: 1rem 1.5rem;
 }
 
 .primary {
